<?xml version="1.0"?>
<package format="2">
  <name>map_manager</name>
  <version>0.0.0</version>
  <description>The map_manager package</description>

  <maintainer email="lion@todo.todo">lion</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>tf</depend>
  <depend>interfaces</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <export>
    <nodelet plugin="${prefix}/map_manager_plugin.xml" />
  </export>
</package>